Update AUTHORS - fix whitespace, update credits link

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,7 +11,7 @@ Primary Authors: (In alphabetical order.)
 
 Auxiliary Authors: (In alphabetical order.)
 
-	Don Caldwell <dfwc@reserach.att.com>
+    Don Caldwell <dfwc@reserach.att.com>
     David Dobkin <dpd@cs.princeton.edu>
     Tim Dwyer <tgdwyer@gmail.com>
     Eleftherios Koutsofios <ek@research.att.com>
@@ -20,4 +20,4 @@ Auxiliary Authors: (In alphabetical order.)
 
 ---------------
 
-See http://www.graphviz.org/Credits.php for further information.
+See http://www.graphviz.org/credits/ for further information.
